# othello-ai-contest

./: 01_io_spec.md  02_implementation_plan.md  CMakeLists.txt  README.md  simple_greedy.py  submit.cpp  test_io.cpp  test_io2.cpp
src/: bitboard.cpp  bitboard.h  endgame_solver.cpp  endgame_solver.h  evaluator.cpp  evaluator.h  main.cpp  search.cpp  search.h  simple_evaluator.cpp  simple_evaluator.h  transposition_table.h
src/evaluators/: README.md  evaluator.h  simple_evaluator.h
src/search/: endgame_solver.h  search.h
src/utils/: transposition_table.cpp  transposition_table.h
tests/: bitboard_test.cpp  evaluator_test.cpp  search_test.cpp  simple_evaluator_test.cpp  test_io2_test.cpp
